change the target branches

--- a/.github/workflows/example-firefox.yml
+++ b/.github/workflows/example-firefox.yml
@@ -1,5 +1,10 @@
 name: example-firefox
-on: push
+on:
+  push:
+    branches:
+      - "master"
+      - "!jenkins"
+
 jobs:
   firefox:
     runs-on: ubuntu-latest
