--- a/.github/workflows/example-start.yml
+++ b/.github/workflows/example-start.yml
@@ -1,5 +1,10 @@
 name: example-start
-on: [push]
+on:
+  push:
+    branches:
+      - "master"
+      - "!jenkins"
+
 jobs:
   start:
     # example with web application build,
@@ -16,4 +21,4 @@ jobs:
           working-directory: examples/start
           build: npm run build
           start: npm start
-          wait-on: 'http://localhost:5000'
+          wait-on: "http://localhost:5000"
