--- a/.github/workflows/example-start-and-yarn-workspaces.yml
+++ b/.github/workflows/example-start-and-yarn-workspaces.yml
@@ -1,5 +1,10 @@
 name: example-start-and-yarn-workspaces
-on: [push]
+on:
+  push:
+    branches:
+      - "master"
+      - "!jenkins"
+
 jobs:
   single:
     # the example has Yarn workspace in its "root" folder
@@ -16,7 +21,7 @@ jobs:
           working-directory: examples/start-and-yarn-workspaces/workspace-1
           build: yarn run build
           start: yarn start
-          wait-on: 'http://localhost:5000'
+          wait-on: "http://localhost:5000"
 
   multiple:
     # example with web application build,
@@ -44,4 +49,4 @@ jobs:
           working-directory: ${{ matrix.cypress.working_directory }}
           build: yarn run build
           start: yarn start
-          wait-on: 'http://localhost:5000'
+          wait-on: "http://localhost:5000"
